fixed spacing in css

--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -23,10 +23,6 @@
     padding: 5px;
 }
 
-img.profile-img {
-    
-}
-
 /* MEDIA QUERIES */
 @media screen and (max-width: 600px) {
     .blog-container {
