--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -11,16 +11,3 @@ footer {
     width: 50px;
     height: 50px;
 }
-
-/* MEDIA QUERIES */
-@media screen and (max-width: 1030px) and (min-width: 820px) {
-    width: 300px;
-}
-
-@media screen and (max-width: 819px) and (min-width: 720px) {
-    width: 270px;
-}
-
-@media screen and (max-width: 470px) and (min-width: 300px) {
-    width: 240px;
-}
